# pynurses

./: README.md  demo.py  pyproject.toml
pynurses/: __init__.py  _i18n.py  _unicode.py  content_editor.py  curses_menu.py  demo.py  help.py  menu_item.py  password.py  progress.py  prompts.py  result.py  types.py
