[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pynurses"
version = "0.1.0"
description = "Self-contained curses TUI primitives: menus, prompts, content editor."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "h8d13" }]
classifiers = [
    "Environment :: Console :: Curses",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Source = "https://github.com/h8d13/pynurses"

[tool.setuptools.packages.find]
include = ["pynurses*"]
